2009-01-29  Till Kamppeter <till.kamppeter@gmail.com>

	* renderer.c: If there were very many JCL lines in the driver's
	  output or coming together by JCL options, the JCL merging
	  process (kid4) segfaulted (Ubuntu bug LP: #321164,
	  https://launchpad.net/bugs/321164).

2009-01-14  Till Kamppeter <till.kamppeter@gmail.com>

	* Tagged branch for release 4.0.0.

2009-01-13  Till Kamppeter <till.kamppeter@gmail.com>

	* options.c: Custom JCL options were not inserted correctly
	  (thanks to Bin Li from Ricoh for reporting this). Fixed also
	  that "None" as argument for a string or password option is
	  considered as the empty string.

	* options.c: String and password option settings got inserted into
	  the command line or the PostScript code with the "Custom."
	  prefix (thanks to Bin Li from Ricoh for reporting this). Fixed
	  also a segmentation fault due to missing initialization of
	  components of the param_t data structure by the
	  option_add_custom_param_from_string() function. Removed also
	  some unneeded free() calls.

2009-01-12  Till Kamppeter <till.kamppeter@gmail.com>

	* acinclude.m4: Eliminated warnings when generating ./configure

2009-01-08  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE: Version 4.0.0.

	* STANDARD_installation: Tell also that "sudo make install" works
	  to run "make install" as root.

	* Makefile.am: Fixed cleaning rules. Many transient files did not
	  get removed.
	  Fixed "make inplace" and uninstalling rules.

2009-01-03  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Do the workaround for PostScript input of
	  OpenOffice 1.1.x also for StarOffice 8 (Thanks to Martin Jacobs,
	  martin dot jacobs at arcor dot de, for the patch).

2008-12-10  Till Kamppeter <till.kamppeter@gmail.com>

	* foomaticrip.c, foomaticrip.h, options.c: The PostScript code of
	  PostScript options did not get inserted when the spooler is CUPS
	  and foomatic-rip had to convert incoming PDF to PostScript